examples/test/testpolicy18273.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18273
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key42: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value25
          key46: value14
          key49: value1
      podSelector:
        matchLabels:
          key11: value38
